# fastforge

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 0bb8e652d093_initial_migration.py  1191ae4dd5d2_initial_migration.py
src/: auth.py  config.py  database.py  email_service.py  main.py  sms_service.py
src/models/: __init__.py  role.py  user.py
src/routes/: auth.py  health.py  roles.py  users.py
tests/: test_auth.py  test_health.py
