[project]
name = "fastforge"
version = "0.1.0"
description = "A scalable FastAPI boilerplate"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard]>=0.116.0,<1.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "sqlmodel>=0.0.24,<1.0.0",
    "alembic>=1.16.4,<2.0.0",
    "ruff>=0.12.4,<1.0.0",
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "argon2-cffi>=25.1.0,<26.0.0",
    "redis[hiredis]>=6.4.0,<7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "pre-commit>=4.2.0,<5.0.0",
    "isort>=6.0.1,<7.0.0",
]
