[project]
name = "fastforge"
version = "0.1.0"
description = "FastAPI boilerplate with RBAC, JWT, OTP auth, Redis, and rate-limiting"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic>=1.16.5,<2.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi[standard]>=0.119,<1.0.0",
    "psycopg[binary]>=3.2.10,<4.0.0",
    "pyjwt>=2.10.1,<3.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "redis[hiredis]>=6.4.0,<7.0.0",
    "ruff>=0.13.2,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "sqlmodel>=0.0.25,<0.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "isort>=6.0.1,<7.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
]
